@@ -1,0 +1,16 @@
+/**
+ * Copyright(c)2013,zhangchunsheng,www.zhangchunsheng.com.cn
+ * Version: 1.0
+ * Author: zhangchunsheng
+ * Date: 2014-02-28
+ * Description: loadView
+ */
+function LoadView(opts) {
+	
+};
+
+LoadView.prototype.addEventListener = function(name, callback) {
+	
+};
+
+module.exports = LoadView;
